[gd_scene load_steps=8 format=3 uid="uid://bnbsq2yjga2wk"]

[ext_resource type="Script" path="res://main.gd" id="1_0ahoj"]
[ext_resource type="PackedScene" uid="uid://dbl1o8lltl2wh" path="res://mob.tscn" id="2_tynrd"]
[ext_resource type="PackedScene" uid="uid://kyovd4m0hldm" path="res://player.tscn" id="3_3f32a"]
[ext_resource type="PackedScene" uid="uid://bhfuxgggenask" path="res://hud.tscn" id="4_n75mp"]
[ext_resource type="AudioStream" uid="uid://bsyw7odhtt5sg" path="res://art/house-in-a-forest-loop.ogg" id="5_8g3ue"]
[ext_resource type="AudioStream" uid="uid://chhl0nsuqgal" path="res://art/game-over.wav" id="6_ocy5e"]

[sub_resource type="Curve2D" id="Curve2D_vjwu6"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_0ahoj")
mob_scene = ExtResource("2_tynrd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(2.11775e-06, 0.506059, 0.799485, 1)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_vjwu6")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource("3_3f32a")]

[node name="HUD" parent="." instance=ExtResource("4_n75mp")]

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 360)
gizmo_extents = 316.3

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_8g3ue")
volume_db = -21.791
autoplay = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ocy5e")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
