[gd_scene load_steps=9 format=3 uid="uid://cats4q6yhg7qy"]

[ext_resource type="PackedScene" uid="uid://bjq6cwmd88tk5" path="res://ball.tscn" id="1_h4c8c"]
[ext_resource type="Script" uid="uid://bxy4p8n73s3fj" path="res://main.gd" id="1_llsjg"]
[ext_resource type="PackedScene" uid="uid://r1hd8772ahd8" path="res://paddle.tscn" id="2_a5j7f"]
[ext_resource type="PackedScene" uid="uid://x22sxtuh8hoh" path="res://brick_layout.tscn" id="3_kbamv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqs7s"]
size = Vector2(1280, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thsc5"]
size = Vector2(80, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eukin"]
size = Vector2(80, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4c08"]
size = Vector2(1280, 21)

[node name="Main" type="Node2D"]
script = ExtResource("1_llsjg")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
color = Color(0, 0, 0, 1)

[node name="Walls" type="Node2D" parent="."]

[node name="TopWall" type="StaticBody2D" parent="Walls"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2(640, -40)
shape = SubResource("RectangleShape2D_mqs7s")

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2(-40, 360)
shape = SubResource("RectangleShape2D_thsc5")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2(1320, 360)
shape = SubResource("RectangleShape2D_eukin")

[node name="Ball" parent="." instance=ExtResource("1_h4c8c")]
position = Vector2(400, 480)

[node name="Paddle" parent="." groups=["Paddles"] instance=ExtResource("2_a5j7f")]
position = Vector2(400, 640)

[node name="BrickLayout" parent="." instance=ExtResource("3_kbamv")]

[node name="GameOver" type="Label" parent="."]
offset_top = 400.0
offset_right = 1280.0
offset_bottom = 560.0
theme_override_font_sizes/font_size = 88
horizontal_alignment = 1
vertical_alignment = 1

[node name="Boundary" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundary"]
position = Vector2(640, 709.5)
shape = SubResource("RectangleShape2D_q4c08")

[connection signal="body_entered" from="Boundary" to="." method="_on_boundary_body_entered"]
