[gd_scene load_steps=6 format=3 uid="uid://ckgbbo6nlwbjs"]

[ext_resource type="Script" path="res://main.gd" id="1_44qc3"]
[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_gwm20"]
[ext_resource type="PackedScene" uid="uid://f8ghfn5emetg" path="res://bird.tscn" id="2_rkw47"]
[ext_resource type="PackedScene" uid="uid://bgfcc1w5swce6" path="res://pipe.tscn" id="2_yvsok"]
[ext_resource type="PackedScene" uid="uid://cyhp0bxf6arhb" path="res://ground.tscn" id="4_sofej"]

[node name="Main" type="Node2D"]
script = ExtResource("1_44qc3")
pipe_scene = ExtResource("2_yvsok")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(432, 384)
texture = ExtResource("1_gwm20")

[node name="Ground" parent="." instance=ExtResource("4_sofej")]

[node name="Bird" parent="." instance=ExtResource("2_rkw47")]
position = Vector2(485, 417)

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
